# Language_conditioed_RL

./: .gitattributes  .gitignore  LICENSE  README.md  env.py  evaluate.py  evaluate_sequence.py  llm_parser.py  ppo.py  pyproject.toml  requirements.txt  smoke_test.py  start_training.sh  train.py
configs/transformer/: place.json  transfer.json
docs/: transformer_ppo.md
full_drawer_task/: __init__.py  chained_env_cfg.py  chained_mdp.py  chained_rsl_rl_ppo_cfg.py  play_chained.py  train_chained.py
scripts/: evaluate.py  evaluate_sequence.py  smoke_test.py  start_training.sh  train.py
scripts/isaac_sim_ik/: play_grasp_curriculum.py  train_grasp_auto_curriculum.py
scripts/transformer/: evaluate.py  smoke_test.py  train.py  train_place.sh  train_transfer.sh
src/language_conditioned_rl/: __init__.py  env.py  llm_parser.py  ppo.py  task_config.py
src/language_conditioned_rl/isaac_sim_ik/: __init__.py  franka_grasp_curriculum_env.py  franka_grasp_ik_env.py  rsl_rl_grasp_curriculum_cfg.py
src/language_conditioned_rl/transformer/: __init__.py  config.py  curriculum.py  language.py  model.py  observation.py  ppo.py
tests/: test_multitask.py  test_transformer_policy.py
