[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "language-conditioned-rl"
version = "0.1.0"
description = "Multi-task language-conditioned PPO for Franka placing and stacking."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "gymnasium",
    "imageio",
    "mujoco",
    "numpy",
    "openai",
    "opencv-python",
    "torch",
]

[tool.setuptools.packages.find]
where = ["src"]
